<?xml version="1.0" encoding="utf-8"?>
<androidx.slidingpanelayout.widget.SlidingPaneLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/sliding_pane_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HomeFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="550dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                android:orientation="vertical">

            <HorizontalScrollView
                    android:id="@+id/chip_group_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleLine="true"
                        app:singleSelection="true"
                        android:paddingHorizontal="@dimen/padding"
                        android:paddingVertical="@dimen/padding_small">

                    <com.google.android.material.chip.Chip
                            android:id="@+id/chip_business"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category_business"
                            style="@style/Widget.MaterialComponents.Chip.Filter"/>

                    <com.google.android.material.chip.Chip
                            android:id="@+id/chip_entertainment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category_entertainment"
                            style="@style/Widget.MaterialComponents.Chip.Filter"/>

                    <com.google.android.material.chip.Chip
                            android:id="@+id/chip_health"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category_health"
                            style="@style/Widget.MaterialComponents.Chip.Filter"/>

                    <com.google.android.material.chip.Chip
                            android:id="@+id/chip_science"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category_science"
                            style="@style/Widget.MaterialComponents.Chip.Filter"/>

                    <com.google.android.material.chip.Chip
                            android:id="@+id/chip_sports"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category_sports"
                            style="@style/Widget.MaterialComponents.Chip.Filter"/>

                    <com.google.android.material.chip.Chip
                            android:id="@+id/chip_technology"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category_technology"
                            style="@style/Widget.MaterialComponents.Chip.Filter"/>
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    tools:itemCount="10"
                    tools:listitem="@layout/list_item"/>
        </LinearLayout>

        <TextView
                android:id="@+id/message_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_results"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="center"/>

        <Button
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/retry"/>

        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:liftOnScroll="false">

            <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_scrollFlags="scroll"
                    app:iconifiedByDefault="false"
                    app:defaultQueryHint="@string/search_hint"
                    android:background="?attr/colorSurface"/>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.fragment.app.FragmentContainerView
            android:id="@+id/detail_fragment_container"
            android:name="com.example.newsapplication.ui.DetailFragment"
            android:layout_width="300dp"
            android:layout_height="match_parent"/>
</androidx.slidingpanelayout.widget.SlidingPaneLayout>
